--- a/static/CSS/style.css
+++ b/static/CSS/style.css
@@ -7,89 +7,83 @@
     --dark: #000;
     --blue: #1931ab;
 }
-
+h1 {
+    visibility: hidden;
+}
+#title-components{
+    visibility: hidden;
+}
 body {
     color: var(--white);
     font-family: Arial, Helvetica, sans-serif;
     display: flex;
     justify-content: center;
-    height: 90vh;
     margin: 0;
+    overflow: hidden;
     /* Remova a propriedade overflow: hidden; para permitir a rolagem */
 }
-
-
 table {
     width: 100%;
     border-collapse: collapse;
     margin-bottom: 20px;
 }
-
 th, td {
     padding: 8px;
     text-align: left;
 }
-
 .message-row {
     display: flex;
     justify-content: flex-start; /* Ajustado para alinhar à esquerda */
     margin: 5px 0;
     background-color: var(--blue); /* Cor de fundo para mensagens do usuário */
 }
-
-
 /* Estilos para as mensagens do usuário */
 .user-message-row {
     display: flex;
-    justify-content: flex-start;
+    justify-content: flex-end;
     margin: 5px 0;
 }
-
 .user-message-sender {
     width: 30%;
     text-align: left;
 }
-
 .user-message {
-    background-color: var(--blue);
-    color: var(--white);
+    background-color: var(--blue); /* Cor de fundo para mensagens do usuário */
+    color: var(--white); /* Cor do texto para mensagens do usuário */
     border-radius: 10px;
     padding: 10px;
     max-width: 70%;
     word-wrap: break-word;
     margin: 0 10px 5px 0;
     text-align: left;
-    align-self: flex-start;
+    align-self: flex-end; /* Alinhe à direita */
 }
-
 /* Estilos para as mensagens do chatbot */
 .bot-message-row {
     display: flex;
-    justify-content: flex-end;
+    justify-content: flex-start;
     margin: 5px 0;
 }
-
 .bot-message-sender {
     width: 30%;
     text-align: right;
 }
-
 .bot-message {
     background-color: var(--green);
     color: var(--dark);
     border-radius: 10px;
     padding: 10px;
-    max-width: 70%;
+    max-width: 60%;
     word-wrap: break-word;
     margin: 0 0 5px 10px;
     text-align: left;
-    align-self: flex-end;
+    align-self: flex-start;
 }
 
 .back-img {
     position: fixed;
-    top: 0;
-    left: 0;
+    top: auto;
+    left: auto;
     width: 100%;
     height: 100%;
     background-image: url('/static/Group\ 1.png');
@@ -97,18 +91,48 @@ th, td {
     background-repeat: no-repeat;
 }
 .bot-tutorial {
-    display: flex;
-    flex-direction: column;
     align-items: center;
-    justify-content: space-between;
     min-height: 100vh;
-    padding: 3rem;
     border-radius: 10px;
     text-align: center;
     width: 100%;
     max-width: 600px;
     margin: auto;
     position: relative;
+}
+#manual {
+    text-align: justify;
+    padding: 20px;
+    background-color: rgba(0, 128, 0, 0.5);
+    color: var(--white);
+    margin: 4%;
+    border-radius: 15px;
+    height: auto;
+    border: 3px solid var(--yellow);
+    position: relative;
+}
+
+#manual button {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    background: none;
+    border: none;
+    color: var(--white);
+    cursor: pointer;
+    font-size: 16px;
+}
+#manual2{
+    text-align: justify;
+    padding: 20px;
+    margin: 1%;
+    width: 400px;
+
+    background-color: rgba(0, 128, 0, 0.5); /* R: 0, G: 128, B: 0, Alfa: 0.5 (50% de transparência) */
+    color: var(--white);
+    border-radius: 15px;
+    height:400px;
+    border: 3px solid var(--yellow); /* Adicionando 'solid' para especificar o estilo da borda */
 }
 .components{
     display: flex;
@@ -125,24 +149,21 @@ th, td {
     position: relative;
 }
 .guru-div{
-display: flex;
-padding: auto;
+    display: flex;
+    padding: 12px;
 }
 .box-question {
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: space-between;
-    min-height: 100vh;
     padding: auto;
-    height: auto;
-    border-radius: 10px;
+    height: 650px;
     text-align: center;
     width: 100%;
-    max-width: 600px;
     margin: auto;
     position: relative;
 }
+
 .bot-tutorial {
     border-radius: 10px 10px 0 0;
     color: var(--white);
@@ -150,7 +171,8 @@ padding: auto;
 }
 
 .footer {
-    width: 100%;
+    height: auto;
+    width: 93%;
     background-color: var(--green);
     border-radius: 0 0 10px 10px;
     padding: 1rem;
@@ -184,3 +206,23 @@ input {
     transition: 0.4s;
 }
 
+.message-container {
+    max-width: auto;
+    max-height: auto; /* Defina a altura máxima desejada para a mensagem-container */
+    overflow: auto;
+    padding: 10px; /* Adicione um espaço entre o conteúdo e a borda da caixa de mensagens */
+    border: 7px solid var(--yellow); /* Adicione uma borda para melhorar a aparência */
+}
+#message-table {
+    background-color: var(--white);
+    visibility: unset;
+}
+
+#message-table th, #message-table td {
+    text-align: left;
+}
+
+#message-table img {
+    max-width: 100px; /* Ajuste conforme necessário */
+    height: auto;
+}
